fix: align experience to flex-start

--- a/src/components/Experience/styles.module.scss
+++ b/src/components/Experience/styles.module.scss
@@ -1,6 +1,6 @@
 .grid, .meta {
     display: grid;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .grid {
